[artf1265062][25Q4_AUTO]: nfc: Add "android" package to nfc privileged broadcasts
Bug: 426084335

Test: builds

Flag: EXEMPT bugfix